Moved Arena to Kotlin.
Made faction nullable on the player.
Fixed all methods for arenas.